@startuml

class teacher {
    id
    email: unique
    name
    company
    postalAddress
    phone
    vat
    iban
    bic
}

class school {
    id
    name: unique
    contact
    colour
    email
    postaladdress
    phone
    mobilephone
    website
}

class contract {
    id
    name
    hourlyrate: Money
    vatrate: float
}

class student {
    id
    name: unique
    disabled: boolean
    subject
    email
    postaladdress
    phone
    mobilephone
}

class meeting {
    id
    subject
    description
    planningFrom
    planningTo
    location
}

contract --> "1" school: SCHOOL
contract --> "1" teacher: TEACHER
contract --> "*" student: STUDENT

meeting --> "1" teacher: TEACHER
meeting --> "0..1" contract: CONTRACT
meeting --> "1..*" student: STUDENT

note right of contract
    A contract is not only between
    a teacher and a school,
    it's more between a teacher,
    a school and a (group of) student(s)
end note

@enduml
